# venvs

./: .pre-commit-config.yaml  README.adoc
.github/: renovate.json
apps/: pyproject.toml
dummy/: pyproject.toml
jupyterlab/: pyproject.toml
wtf/: pyproject.toml
