[build-system]
requires = [
  "setuptools ==82.0.1",
  "setuptools-scm ==10.0.5",
  "wheel ==0.47.0",
  "pip ==26.1",
]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[tool.setuptools_scm]
root = ".."
# set dynamic version

[project]
name = "eirnym-apps-venv"

dynamic = ["version"]

requires-python = ">=3.12"

dependencies = [
  "pip-autoremove == 0.10.0",
  "pipdeptree ==2.35.2",
  "genpasswd-everdrone == 2.0.3",
  "tox ==4.53.1",
  "unrpa == 2.3.0",
]
