[build-system]
requires = [
  "setuptools == 80.9.0",
  "setuptools-scm == 8.3.1",
  "wheel ==0.46.2",
  "pip ==26.1",
]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[tool.setuptools_scm]
root = ".."
# set dynamic version

[project]
name = "dummy-venv"

dynamic = ["version"]

requires-python = ">=3.12"

dependencies = [ # use vertical format
    "pip-autoremove == 0.10.0",
    "pipdeptree == 2.35.1"
]
