[build-system]
requires = [
  "setuptools ==83.0.0",
  "setuptools-scm ==10.2.0",
  "wheel ==0.47.0",
  "pip ==26.1.2",
]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[tool.setuptools_scm]
root = ".."
# set dynamic version

[project]
name = "dummy-venv"

dynamic = ["version"]

requires-python = ">=3.12"

dependencies = [ # use vertical format
    "pip-autoremove == 0.10.0",
    "pipdeptree ==3.1.1"
]
