[build-system]
requires = [
  "setuptools ==80.9.0",
  "setuptools-scm == 8.3.1",
  "wheel == 0.45.1",
  "pip ==25.2",
]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[tool.setuptools_scm]
root = ".."
# set dynamic version

[project]
name = "eirnym-jupyterlab-venv"

dynamic = ["version"]

requires-python = ">=3.12"

dependencies = [
  # package management
  "pip-autoremove == 0.10.0",
  "pipdeptree ==2.30.0",
  # debug
  "icecream ==2.1.8",
  # Data manipulation
  "polars ==1.36.0",
  "pyarrow ==22.0.0",
  "networkx ==3.6.1",
  "orjson ==3.11.5",
  # Jupyter Lab
  "jupyterlab ==4.5.0",
  "jupyterlab-language-pack-pl-PL",
]

[project.optional-dependencies]
data_view = ["ipycytoscape == 1.3.3", "ipydatagrid == 1.4.0", "plotly ==6.5.0"]
lsp = ["python-lsp-ruff", "python-lsp-server", "python-lsp-jsonrpc"]
