[build-system]
requires = [
  "setuptools ==82.0.1",
  "setuptools-scm ==10.0.5",
  "wheel ==0.47.0",
  "pip ==26.1.1",
]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[tool.setuptools_scm]
root = ".."
# set dynamic version

[project]
name = "eirnym-jupyterlab-venv"

dynamic = ["version"]

requires-python = ">=3.12"

dependencies = [
  # package management
  "pip-autoremove == 0.10.0",
  "pipdeptree ==2.35.3",
  # debug
  "icecream == 2.2.0",
  # Data manipulation
  "polars == 1.40.1",
  "pyarrow == 24.0.0",
  "networkx ==3.6.1",
  "orjson ==3.11.9",
  # Jupyter Lab
  "jupyterlab ==4.5.8",
  "jupyterlab-language-pack-pl-PL",
]

[project.optional-dependencies]
data_view = ["ipycytoscape == 1.3.3", "ipydatagrid == 1.4.0", "plotly ==6.7.0"]
lsp = ["python-lsp-ruff", "python-lsp-server", "python-lsp-jsonrpc"]
