[build-system]
requires = [
  "setuptools ==80.9.0",
  "setuptools-scm == 8.3.1",
  "wheel == 0.45.1",
  "pip ==25.1.1",
]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[tool.setuptools_scm]
root = ".."
# set dynamic version

[project]
name = "wtf-venv"

dynamic = ["version"]

requires-python = ">=3.12"

dependencies = [
  # package management
  "pip-autoremove",
  "pipdeptree",
  "whatthepatch",
  "rope",
  "whatlang-pyo3",
  "tenacity",
  "pure_eval",
  "platformdirs",
  "parso",
  "nest-asyncio",
  "dill",
  "bleach",
  "appnope",
  "Send2Trash",
]
